--- a/style.css
+++ b/style.css
@@ -91,18 +91,18 @@ a {
     margin-top: 0%;
 }
 
+.content-area {
+    display: grid;
+    grid-area: content-area;
+    grid-template-columns: 5% 1fr 1fr 1fr 1fr 5%;
+    grid-template-rows: auto;
+    grid-template-areas: ". text-block text-block image-block image-block  .";
+}
+
 .content-area .text-block {
     grid-area: text-block;
     width: 100%;
     max-height: 100%;
-}
-
-.content-area {
-    display: grid;
-    grid-area: content-area;
-    grid-template-columns: subgrid;
-    grid-template-rows: auto;
-    grid-template-areas: ". text-block text-block image-block image-block  .";
 }
 
 .content-area .image-block {
