--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ a {
     grid-template-columns: 5% 1fr 1fr 1fr 1fr 5%;
     grid-template-rows: auto;
     grid-template-areas: ". text-block text-block image-block image-block  .";
+    column-gap: 5%;
     background-color: #F29559;
     padding: 5% 0%;
     margin: 0%;
