--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ Black: #0020300 */
 body {
     background-color: #DDBDD5;
     color: #0020300;
-    font-family: 'Work Sans', sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     display: grid;
     grid-template-columns: 5% 1fr 1fr 1fr 1fr 5%;
     grid-template-rows: auto;
